# Imgui_Android

./: AGENTS.md  README.md  local.properties.example  settings.gradle.kts
.github/workflows/: dev.yml  release.yml
ImguiDemoSdl/: build.gradle  version.properties
ImguiDemoSdl/src/main/: AndroidManifest.xml
ImguiDemoSdl/src/main/cpp/: CMakeLists.txt  mbedtls_config.h
ImguiDemoSdl/src/main/cpp/src/: logger.h  main.cpp  websocket_client.cpp  websocket_client.h
ImguiDemoSdl/src/main/java/me/sfalexrog/imguidemo/: DemoActivity.java
ImguiDemoSdl/src/test/java/me/sfalexrog/imguidemo/: PricePlotUpdateTest.java  WebSocketConnectivityTest.java
ci/: AGENTS.md  record_ci_error.sh
docs/: price_updates_prd.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
